crates/solidity-v2/testing/snapshots/diagnostics_output/semantic/constant_cycles/constants/qualified_self_reference_cycle/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 8349] Error: Initial value for constant variable has to be compile-time constant.
   ╭─[input.sol:5:35]
   │
 5 │     uint256 internal constant A = B.A;
   │                                   ─┬─  
   │                                    ╰─── Error occurred here.
───╯
